--- a/Entwined/Entwined/Onboarding.storyboard
+++ b/Entwined/Entwined/Onboarding.storyboard
@@ -523,7 +523,7 @@ to the next word</string>
                                     <color key="titleColor" red="0.086054392158985138" green="0.41069817543029785" blue="0.21969392895698547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="SRQ-um-M4d" kind="presentation" modalPresentationStyle="automatic" modalTransitionStyle="crossDissolve" id="Bau-G3-dXh"/>
+                                    <segue destination="SRQ-um-M4d" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Bau-G3-dXh"/>
                                 </connections>
                             </button>
                         </subviews>
