--- a/Entwined/Entwined/Game.storyboard
+++ b/Entwined/Entwined/Game.storyboard
@@ -78,10 +78,10 @@
             </objects>
             <point key="canvasLocation" x="269.02173913043481" y="108.69565217391305"/>
         </scene>
-        <!--Results-->
+        <!--Home-->
         <scene sceneID="i88-Yk-neL">
             <objects>
-                <viewControllerPlaceholder storyboardName="Results" id="73j-69-nz3" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="Home" storyboardName="Home" id="73j-69-nz3" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="4AR-my-9Gc"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXc-0C-efK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -96,54 +96,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="side-decor.png" translatesAutoresizingMaskIntoConstraints="NO" id="1vC-YV-Rxs">
-                                <rect key="frame" x="0.0" y="-121" width="736" height="166"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="side-decor.png" translatesAutoresizingMaskIntoConstraints="NO" id="1vC-YV-Rxs">
+                                <rect key="frame" x="0.0" y="-1" width="736" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KF0-9g-E8X">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KF0-9g-E8X">
                                 <rect key="frame" x="0.0" y="40" width="736" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="46" id="7wk-Cg-V1K"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="26"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Results" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOH-fv-GGr">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Results" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOH-fv-GGr">
                                 <rect key="frame" x="283" y="-1" width="171" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="wWj-PW-EhC">
-                                <rect key="frame" x="65.000000000000014" y="87" width="156.33333333333337" height="290"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillProportionally" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="wWj-PW-EhC">
+                                <rect key="frame" x="65.000000000000014" y="82.333333333333343" width="156.33333333333334" height="299.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the first word." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTC-LY-fVA" userLabel="word-one">
-                                        <rect key="frame" x="0.0" y="0.0" width="156.33333333333334" height="21.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="156.33333333333334" height="22.333333333333332"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eun-JS-nx6" userLabel="word-two">
-                                        <rect key="frame" x="0.0" y="68.666666666666657" width="156.33333333333334" height="21.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="69.333333333333329" width="156.33333333333334" height="22.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGZ-UE-mDw" userLabel="word-three">
-                                        <rect key="frame" x="0.0" y="137.33333333333334" width="156.33333333333334" height="21.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="138.66666666666666" width="156.33333333333334" height="22.333333333333343"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ui5-2U-1Vg" userLabel="word-four">
-                                        <rect key="frame" x="0.0" y="206" width="156.33333333333334" height="21.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="208" width="156.33333333333334" height="22.333333333333343"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCm-yn-2OA" userLabel="word-five">
-                                        <rect key="frame" x="0.0" y="274.33333333333331" width="156.33333333333334" height="15.666666666666686"/>
+                                        <rect key="frame" x="0.0" y="277.33333333333331" width="156.33333333333334" height="22.333333333333314"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -224,35 +224,24 @@
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="EkG-Oh-3FE"/>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3H-uY-CTj">
-                                <rect key="frame" x="20" y="7" width="34" height="30"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3H-uY-CTj">
+                                <rect key="frame" x="20" y="8" width="189" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="house.fill" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="18" scale="large" weight="semibold"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="52" scale="large" weight="semibold"/>
                                 </state>
                                 <connections>
-                                    <segue destination="73j-69-nz3" kind="presentation" id="wfc-de-rTO"/>
+                                    <outletCollection property="gestureRecognizers" destination="Mgh-uu-vMg" appends="YES" id="DJ8-MO-ONb"/>
+                                    <segue destination="73j-69-nz3" kind="presentation" identifier="Results" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Tr8-yN-aXI"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="wWj-PW-EhC" firstAttribute="leading" secondItem="eXt-Ye-qc2" secondAttribute="leading" constant="64.999999999999986" id="2pA-mD-Ysd"/>
-                            <constraint firstItem="wWj-PW-EhC" firstAttribute="top" secondItem="KF0-9g-E8X" secondAttribute="bottom" constant="1" id="9RS-i8-wRx"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="leading" secondItem="1vC-YV-Rxs" secondAttribute="leading" id="BkP-Yc-jeu"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="leading" secondItem="eXt-Ye-qc2" secondAttribute="leading" id="EL0-Ow-FHr"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="centerX" secondItem="PnW-se-SAM" secondAttribute="centerX" id="GOS-xC-fyo"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="centerX" secondItem="VOH-fv-GGr" secondAttribute="centerX" id="LFQ-h6-04M"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="trailing" secondItem="1vC-YV-Rxs" secondAttribute="trailing" id="Ljp-V3-tzB"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="top" secondItem="b3H-uY-CTj" secondAttribute="bottom" constant="3" id="Ohw-6g-BPq"/>
-                            <constraint firstItem="wWj-PW-EhC" firstAttribute="centerY" secondItem="F5l-aa-wMf" secondAttribute="centerY" id="RtW-rv-Rlk"/>
-                            <constraint firstItem="wWj-PW-EhC" firstAttribute="top" secondItem="1vC-YV-Rxs" secondAttribute="bottom" constant="42" id="j0w-F7-5Th"/>
-                            <constraint firstItem="KF0-9g-E8X" firstAttribute="top" secondItem="fn9-Gy-LGT" secondAttribute="top" constant="40" id="mLS-Gb-IaS"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="eXt-Ye-qc2"/>
                     </view>
-                    <navigationItem key="navigationItem" id="P5j-hc-GgN"/>
                     <connections>
                         <outlet property="levelLabel" destination="KF0-9g-E8X" id="1fe-9d-eOJ"/>
                         <outlet property="word1" destination="JTC-LY-fVA" id="yFc-n5-0Pu"/>
@@ -273,41 +262,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gce-PN-sCd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SpT-hM-OZt">
-                    <rect key="frame" x="0.0" y="0.0" width="214" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lbW-Zc-qYq">
-                    <rect key="frame" x="0.0" y="0.0" width="214" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tbc-ff-UPI">
-                    <rect key="frame" x="0.0" y="0.0" width="214" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KK9-v8-u5t">
-                    <rect key="frame" x="0.0" y="0.0" width="214" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9kP-FE-WYm">
-                    <rect key="frame" x="0.0" y="0.0" width="214" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tapGestureRecognizer id="Mgh-uu-vMg"/>
             </objects>
             <point key="canvasLocation" x="1030.4347826086957" y="105.79710144927537"/>
         </scene>
